--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       <img src="./assets/logo3.png" alt="" class="logo-img-mobile">
     </a>
   </div>
+  <br> <br>
   <div class="hero-section">
     <div class="hero-content">
       <p id="hero-content-p1">6th International Students' Conference on Current Advancement in Science & Technology</p>
-      <h1 id="hero-content-heading" >Spectrum <br><span style="color: #3336e6;"> 2025</span></h1> <br>
+      <h1 id="hero-content-heading" >Spectrum <br><span style="color: #3336e6;"> 2025</span></h1>
       <p class="hero-content-p2">
         Join us for the International Students' Conference on Advancements in Science & Technology, hosted by the Institute of Engineering & Management, Kolkata, from February 21-23, 2025. Keynotes, presentations, and awards await!
       </p>
-      <br>
       <div class="buttons-hero">
         <button class="hero-register">Register</button>
         <button class="hero-contact">Contact us</button>
@@ -80,18 +80,23 @@
   </div> -->
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
+      
       <div class="carousel-item active">
-        <img src="./assets/image-galary/logo1.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
         <img src="./assets/image-galary/logo2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./assets/image-galary/logo3.jpeg" class="d-block w-100" alt="...">
+        <img src="./assets/image-galary/logo3.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="./assets/image-galary/logo4.png" class="d-block w-100" alt="...">
       </div>
+      <div class="carousel-item">
+        <img src="./assets/image-galary/logo5.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assets/image-galary/logo1.png" class="d-block w-100" alt="...">
+      </div>
+      
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
