--- a/index.html
+++ b/index.html
@@ -33,19 +33,18 @@
       <a href="#footer" class="contact">Contact Us</a>
     </header>
   </div>
-  <div class="mobile-header" id="sidebar">
-    <nav class="mobile-nav">
-      <a href="#home">Home</a>
-      <a href="#organisers">Organisers</a>
-      <a href="#invited-speakers">Invited speakers</a>
-      <a href="#call for papers">Call for papers</a>
-      <a href="#registration">Registration</a>
-      <a href="#important dates">Important Dates</a>
-    </nav>
-  </div>
+  <nav class="mobile-nav">
+    <a href="#home">Home</a>
+    <a href="./src/organisers.html">Organisers</a>
+    <a href="./src/invited-speakers.html">Invited speakers</a>
+    <a href="./src/call-for-paper.html">Call for papers</a>
+    <a href="./src/registrations.html">Registration</a>
+    <a href="./src/important-dates.html">Important Dates</a>
+    <a href=""><img src="./assets/close.svg" alt="" class="close"></a>
+  </nav>
   <div class="nav-mobile">
-    <button class="menu-button" id="menuIcon">
-      <img type="button" src="./assets/menu.svg" alt="menu button" class="menu-icon">
+    <button class="menu-button" onclick="menuBtn()">
+      <img type="button" src="./assets/menu.svg" alt="menu button" class="menu-icon" id="menuIcon">
     </button>
 
     <a href="#logo" class="mobile-logo">
@@ -86,6 +85,9 @@
       </div>
       <div class="carousel-item">
         <img src="./assets/image-galary/logo3.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assets/image-galary/logo3.jpeg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="./assets/image-galary/logo4.png" class="d-block w-100" alt="...">
@@ -132,5 +134,6 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
