--- a/src/invited-speakers.html
+++ b/src/invited-speakers.html
@@ -53,7 +53,7 @@
     </a>
   </div>
 
-
+<br> <br>
 
   <main>
     <h1 class="speaker-heading" style="color: #3639e6;">
@@ -74,7 +74,7 @@
     </div>
   </main>
 
-  <footer id="footer">
+  <footer id="footer" class="speaker-footer">
     <div class="address-div">
       <p class="address">Address: <a href="https://maps.app.goo.gl/Cf5EG6mwcXmWmStS7">IEM, Management House</a> <br>
         D -1, EP Block, Sector V, Bidhannagar, Kolkata, West Bengal 700091</p>
