--- a/src/organisers.html
+++ b/src/organisers.html
@@ -57,7 +57,7 @@
   <br>
   <main>
     <div class="organising-comitee">
-      <h1 class="heading" style="color:#4a4ce9;">Organising Comitee</h1>
+      <h1 class="heading" style="color:#4a4ce9;">Organising Committee</h1>
       <ul>
         <br> <br>
         <li><b>Chief Patron:</b><span style="color: #4a4ce9;"> Prof. Satyajit Chakrabarti</span>, President, IEM, Kolkata</li>
@@ -76,18 +76,16 @@
         <br>
         <li><b>Convener:</b><span style="color: #4a4ce9;"> Prof. Anubhab Ray</span>, IEM, Kolkata</li>
         <br>
-        <li><b> Coordinator:</b><span style="color: #4a4ce9;"> Prof. Abhijit Kargupta</span>, IEM, Kolkata</li>
-        <br>
         <br>
       </ul>
     </div>
     <div class="advisory-comitee">
-      <h1 class="heading" style="color:#4a4ce9;">Advisory Comitee</h1>
+      <h1 class="heading" style="color:#4a4ce9;">Advisory Committee</h1>
       <br><br>
       <ul>
-        <li><span style="color:#4a4ce9;">Dr. Montserrat Rivas</span> Escuela Politécnica de Ingeniería, Spain</li>
+        <li><span style="color:#4a4ce9;">Dr. Montserrat Rivas</span>, Scientist, Escuela Politécnica de Ingeniería, Spain</li>
         <br>
-        <li><span style="color:#4a4ce9;">Dr. H. Pai, Scientist</span>, Extreme Light Infrastructure-Nuclear Physics, Romania</li>
+        <li><span style="color:#4a4ce9;">Dr. H. Pai</span>, Scientist, Extreme Light Infrastructure-Nuclear Physics, Romania</li>
         <br>
         <li><span style="color:#4a4ce9;">Dr. Lokesh Tribedi</span>, Senior Professor, TIFR, Mumbai, India</li>
         <br>
