--- a/index.html
+++ b/index.html
@@ -51,8 +51,20 @@
       <img src="./assets/logo3.png" alt="" class="logo-img-mobile">
     </a>
   </div>
-  <br> <br>
-  <div class="hero-section">
+  <br>
+  <main>
+    <h2 class="heading-index">6th International Conference on Current Advancement in Science & Technology</h2>
+    <h1 class="heading-index-spectrum">SPECTRUM 2025</h1>
+    <p class="index-para">in association with</p>
+    <div class="img-container">
+      <img src="./assets/image-galary/logo1.jpg" alt="" class="association-img">
+      <img src="./assets/image-galary/logo3.jpeg" alt="" class="association-img">
+      <img src="./assets/image-galary/logo3.png" alt="" class="association-img">
+      <img src="./assets/image-galary/logo6.png" alt="" class="association-img">
+      <img src="./assets/image-galary/logo5.png" alt="" class="association-img">
+    </div>
+  </main>
+  <!-- <div class="hero-section">
     <div class="hero-content">
       <p id="hero-content-p1">6th International Students' Conference on Current Advancement in Science & Technology</p>
       <h1 id="hero-content-heading" >Spectrum <br><span style="color: #3336e6;"> 2025</span></h1>
@@ -63,7 +75,7 @@
         <button class="hero-register">Register</button>
         <button class="hero-contact">Contact us</button>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="carousel">
       <div class="carousel-inner">
           <div class="carousel-item active">
@@ -77,7 +89,7 @@
           </div>
       </div>
   </div> -->
-  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       
       <div class="carousel-item active">
@@ -98,7 +110,7 @@
       <div class="carousel-item">
         <img src="./assets/image-galary/logo1.png" class="d-block w-100" alt="...">
       </div>
-      
+       -->
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -124,6 +136,7 @@
   </div>
   <br>
   <br>
+
   <footer id="footer">
     <div class="address-div">
       <p class="address">Address: <a href="https://maps.app.goo.gl/Cf5EG6mwcXmWmStS7">IEM, Management House</a> <br>
