--- a/src/call-for-paper.html
+++ b/src/call-for-paper.html
@@ -62,19 +62,37 @@
       <br>
       <div class="topics">
         <ul class="ul">
-          <li>Physics</li>
-          <li>Chemistry</li>
-          <li>Engineering</li>
-          <li>Technology</li>
-          <li>BioTechnology</li>
-          <li>Nano Science and Nano Technology</li>
-          <li>Biophysics</li>
-          <li>Optical system and photonic devices</li>
-          <li>Quantum Information Science</li>
-          <li>Robotics</li>
-          <li>IoT</li>
-          <li>AI</li>
-          <li>Machine Learning</li>
+          <li><b>Quantum Computing</b>: Algorithms, applications, and computational advancements.
+          </li>
+          <li><b>Artificial Intelligence in Healthcare</b>: AI-driven diagnostics, treatment plans, and health tech innovations.
+          </li>
+          <li><b>Gene Editing and Biotechnology</b>: CRISPR-Cas9 and its impact on gene therapy and biotechnology.
+          </li>
+          <li><b>Nanotechnology</b>: Drug delivery systems and future biomedical prospects.
+          </li>
+          <li><b>Machine Learning for Climate Change</b>: Predictive analytics and sustainable tech</li>
+          <li><b>Renewable Energy</b>: Solar, wind, and other renewable energy sources.</li>
+          <li><b>Blockchain and Data Security</b>: Decentralized finance and security innovations.</li>
+          <li><b>Autonomous Vehicles</b>: Developments, safety, and ethical considerations.
+          </li>
+          <li><b>3D Printing in Biomedical Engineering</b>: Customization of prosthetics, implants, and tissue engineering.</li>
+          <li><b>Energy Storage Solutions</b>: Next-generation battery technologies and advancements.
+          </li>
+          <li><b>Space Exploration</b>: Space missions, satellite technology, and deep-space innovations.</li>
+          <li><b>Internet of Things (IoT)</b>: Smart devices, integration, and networked environments.</li>
+          <li><b>Synthetic Biology</b>: Biotechnology innovations in life forms and medicine.</li>
+          <li><b>Virtual and Augmented Reality</b>: Innovations in human-computer interaction.
+          </li>
+          <li><b>Big Data Analytics</b>: Business intelligence, data-driven decision making, and analytics.</li>
+          <li><b>Cybersecurity</b>: Threats, protection methods, and digital security advancements.
+          </li>
+          <li><b>Robotics and Automation</b>: Manufacturing, automation, and the future of work.
+          </li>
+          <li><b>Bioprinting</b>: Organ and tissue fabrication technology.
+          </li>
+          <li><b>Advanced Materials Science</b>: Innovations in superconductors, metamaterials, and smart materials.
+          </li>
+          <li><b>Neuroscience and AI</b>: Bridging cognitive science with artificial intelligence.</li>
         </ul>
       </div>
       <br> <br>
