--- a/src/important-dates.html
+++ b/src/important-dates.html
@@ -57,22 +57,41 @@
   <main>
     <br><br>
     <h1 style="color: #4a4ce9;">Important Dates</h1>
-
+    <br>
+    <h2>Paper and Abstract Submission</h2>
     <div class="table">
       <div class="row">
-        <p class="col1">Full paper submission last date</p>
-        <p class="col2"> 31st December 2024
+        <p class="col1">Last Date for Abstract Submission</p>
+        <p class="col2">15.12.2024
         </p>
       </div>
       <div class="row">
-        <p class="col1">Notification of acceptance of full paper</p>
-        <p class="col2">15th January 2025</p>
+        <p class="col1">Notification of acceptance of abstract</p>
+        <p class="col2">20.12.2024</p>
       </div>
       <div class="row">
-        <p class="col1">Early Bird Registration</p>
-        <p class="col2"> till 31st January 2025</p>
+        <p class="col1">Last Date for Submission of Full Paper</p>
+        <p class="col2"> 15.01.2025</p>
+      </div>
+      <div class="row">
+        <p class="col1">Notification about Review report of the Full Paper</p>
+        <p class="col2">15.02.2025</p>
       </div>
     </div>
+    <br> <br>
+    <h2 id="registration-dates-para">Registration</h2>
+    <div class="table" id="registration-dates">
+      <div class="row">
+        <p class="col1">Early Bird Registration</p>
+        <p class="col2">till 15.01.2024
+        </p>
+      </div>
+      <div class="row">
+        <p class="col1">without Early Bird Registration</p>
+        <p class="col2">till 15.02.2024</p>
+      </div>
+    </div>
+
   </main>
 
   <br><br><br>
