--- a/src/registrations.html
+++ b/src/registrations.html
@@ -57,38 +57,81 @@
 
 
 <br>
-  <main>
-    <div class="registrations">
-      <h1 style="color: #4a4ce9;">Registrations</h1>
-      <br> <br>
-      <div class="indian">
-        <h2>Indian Participants</h2>
-        <br>
-        <ul>
-          <li>Faculty/Corporate/ Scientists: <b>Rs. 3000/-</b></li>
-          <li>Ph.d and Post Doc Students: <b> Rs. 2000/-</b></li>
-          <li>UG and PG Students: <b> Rs. 1,500/-</b></li>
-          <li>Participation (only): <b>Rs. 1,000/-</b></li>
-        </ul>
-      </div>
-      <br><br>
-      <div class="foreign">
-        <h2>Foreign Participants</h2>
-        <br>
-        <ul>
-          <li>Faculty/Corporate/ Scientists: <b>$75</b></li>
-          <li>Ph.d and Post Doc Students: <b>$50</b></li>
-          <li>UG and PG Students: <b>$25</b></li>
-          <li>Participation (only): <b>$20</b></li>
-        </ul>
-      </div>
-      <br><br>
-      <br><br>
-      <a class="register" href="#">Click here to register</a>
-      <br><br>
-      <br><br>
+
+<main>
+  <h1 style="color: #4a4ce9;">Registrations</h1>
+  <br>
+  <br>
+  <h2>Indian Participants</h2>
+  <br>
+  <div class="india-table">
+    <div class="india-table-row">
+      <p></p>
+      <p style="color: #4a4ce9;">Before Early Bird(INR)</p>
+      <p style="color: #4a4ce9;">After Early Bird(INR)</p>
     </div>
-  </main>
+
+    <div class="india-table-row">
+      <p>Faculty/ Scientist/ Corporate</p>
+      <p>4000</p>
+      <p>5000</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>Ph.D/ Post Doc</p>
+      <p>3000</p>
+      <p>4000</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>UG/PG Students</p>
+      <p>1500</p>
+      <p>2000</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>Participantion (only)</p>
+      <p>1000</p>
+      <p>1200</p>
+    </div>
+  </div> <br>
+  <br>
+  <h2>Foreigners</h2>
+  <br>
+  <div class="foreign-table">
+    <div class="india-table-row">
+      <p></p>
+      <p style="color: #4a4ce9;">Before Early Bird(INR)</p>
+      <p style="color: #4a4ce9;">After Early Bird(INR)</p>
+    </div>
+    <div class="india-table-row">
+      <p>Faculty/ Scientist/ Corporate</p>
+      <p>75</p>
+      <p>80</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>Ph.D/ Post Doc</p>
+      <p>50</p>
+      <p>60</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>UG/PG Students</p>
+      <p>25</p>
+      <p>25</p>
+    </div>
+
+    <div class="india-table-row">
+      <p>Participantion (only)</p>
+      <p>20</p>
+      <p>25</p>
+    </div>
+  </div>
+
+  <br>
+</main>
+<br><br>
 
   <footer id="footer">
     <div class="address-div">
